# knowsee-public

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.local.yml
assets/: auth-flow.mov  knowsee.mov  light-mode.mov
sagent/: .dockerignore  .env.example  Dockerfile  agent.py  logging_config.py  main.py  pyproject.toml
sagent/agents/: __init__.py  root.py  search.py
sagent/agents/data_analyst/: __init__.py  agent.py  tools.py
sagent/agents/rag/: __init__.py  agent.py
sagent/callbacks/: __init__.py  artifacts.py  data_analyst.py  grounding.py  query_attempts.py  titles.py  user_context.py  widgets.py
sagent/config/: rag-corpora.example.yaml
sagent/converters/: __init__.py  base.py  docx.py  odf.py  pptx.py  rtf.py  xlsx.py
sagent/instructions/: __init__.py  data_analyst.md  main.md  search_agent.md  team_knowledge_agent.md
sagent/patches/: __init__.py  thought_tags.py
sagent/scripts/: bootstrap_rag.py  rag_delete.py  rag_import.py  rag_list.py
sagent/services/: __init__.py  db.py  events.py  titles.py
sagent/services/rag/: __init__.py  config.py  corpus_registry.py  sync.py  teams.py
sagent/tools/: __init__.py  files.py
sagent/utils/: __init__.py  response_helpers.py  semantic_tags.py  title_blocklist.py  upload_limits.py
scripts/: db-migrate-cloud-sql.sh  switch-gcp-profile.sh
terraform/: .sops.example.yaml
web/: .dockerignore  .env.example  .prettierignore  .prettierrc  Dockerfile  biome.json  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
web/drizzle/: 0000_outstanding_stick.sql  0001_wooden_franklin_storm.sql  (+2 more)
(+213 files in other folders)
